--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Arkanoid">
-        <activity android:name=".multiplayer.gameClasses.ActualGameActivity"></activity>
+        <activity android:name=".editor.ui_search_check.LevelsSearchActivity"></activity>
+        <activity android:name=".multiplayer.gameClasses.ActualGameActivity" />
         <activity android:name=".multiplayer.MultiplayerActivity" />
         <activity android:name=".editor.ui_upload_check.UploadLevelActivity" />
         <activity android:name=".editor.EditorActivity" />
