- inserita l'activity per la visualizzazione della lista dei livelli creati condivisi - sperimentazione prompting per il menu di pausa - modifiche relative all'utilizzo dell'Handler durante il gioco di un livello condiviso

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".multiplayer.MultiplayerActivity" />
         <activity android:name=".editor.ui_upload_check.UploadLevelActivity" />
         <activity android:name=".editor.EditorActivity" />
+        <activity android:name=".editor.ui_game.GameSearchedActivity" />
         <activity android:name=".RegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
