- Introduzione della NavUtils per consentire la giusta navigazione tra le Activity dell'applicazione

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,41 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Arkanoid">
-        <activity android:name=".editor.ui_search_check.LevelsSearchActivity"></activity>
+
+        <activity android:name=".editor.ui_search_check.LevelsSearchActivity"
+            android:parentActivityName="com.caserteam.arkanoid.editor.EditorActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caserteam.arkanoid.editor.EditorActivity" />
+        </activity>
+
+        <activity android:name=".editor.ui_game.GameSearchedActivity"
+            android:parentActivityName="com.caserteam.arkanoid.editor.ui_search_check.LevelsSearchActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caserteam.arkanoid.editor.ui_search_check.LevelsSearchActivity" />
+        </activity>
+
+        <activity android:name=".editor.ui_upload_check.UploadLevelActivity"
+                  android:parentActivityName="com.caserteam.arkanoid.editor.EditorActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caserteam.arkanoid.editor.EditorActivity" />
+        </activity>
+
         <activity android:name=".ui.leaderboard.LeaderBoardActivity"></activity>
         <activity android:name=".multiplayer.gameClasses.ActualGameActivity" />
         <activity android:name=".multiplayer.MultiplayerActivity" />
-        <activity android:name=".editor.ui_upload_check.UploadLevelActivity" />
-        <activity android:name=".editor.EditorActivity" />
-        <activity android:name=".editor.ui_game.GameSearchedActivity" />
+
+
+        <activity android:name=".editor.EditorActivity"
+                  android:parentActivityName="com.caserteam.arkanoid.MenuActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caserteam.arkanoid.MenuActivity" />
+        </activity>
+
+
         <activity android:name=".RegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -29,12 +57,14 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity android:name=".gameClasses.GameActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-            </intent-filter>
+        <activity android:name=".gameClasses.GameActivity"
+                  android:parentActivityName="com.caserteam.arkanoid.MenuActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caserteam.arkanoid.MenuActivity" />
         </activity>
-        <activity android:name=".MenuActivity">
+        <activity android:name=".MenuActivity"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
